<resources>
    <string name="app_name_restaurateur" translatable="false">EverIt Restaurateur</string>
    <string name="next">Next</string>
    <string name="shop_name">Shop name</string>
    <string name="piva">VAT Number</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="signup_part_1">Part 1 of 4</string>
    <string name="signup_part_2">Part 2 of 4</string>
    <string name="signup_part_3">Part 3 of 4</string>
    <string name="signup_part_4">Part 4 of 4</string>
    <string name="add">add</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="productName">Product name</string>
    <string name="home">Home</string>
    <string name="order_history">Order history</string>

    <string name="shop_type">Shop Type</string>
    <string name="default_shop_type">Select a shop type</string>
    <string name="error_shop_name">Shop name between 2 and 50 chars</string>
    <string name="error_phone_number">Phone number between 8 and 11 digits</string>
    <string name="error_shop_type">Select a shop type</string>
    <string name="error_VAT_number">VAT number length is 11 digits</string>
    <string name="error_address">Select an address</string>

    <string name="num_max_delivery_per_time_slot">Num max order per time slot</string>
    <string name="delivery_cost_optional">Delivery cost*</string>
    <string name="delivery_cost">Delivery cost</string>
    <string name="min_price_optional">Min price*</string>
    <string name="min_price">Min price</string>
    <string name="back">Back</string>
    <string name="error_num_delivery_time_slot">Num max delivery greater than 0</string>
    <string name="error_delivery_cost">Delivery cost between 1 and 999</string>
    <string name="error_min_price">Min price between 0 and 999</string>
    <string name="error_description">Description max 250 chars</string>

    <string name="opening_time">Opening</string>
    <string name="closing_time">Closing</string>
    <string name="title_opening_time_selection">Select your opening times</string>
    <string name="title_closing_time_selection">Select your closing times</string>
    <string name="error_opening_time">Select opening time</string>
    <string name="error_closing_time">Select closing time</string>
    <string name="error_time_equal">Times must be different</string>

    <string name="error_not_selected_opening_time">Insert at least one opening time</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="error_email">Wrong email format</string>

    <string name="error_match_password">Passwords does not match</string>

    <string name="account_created">Account created</string>
    <string name="account_edited">Account edited</string>

    <string name="map_error">Unable to start map</string>
    <string name="search_autocomplete_error">Unable to suggests places</string>
    <string name="search_autocomplete_empty">No suggestions</string>
    <string name="title_address_chooser">Address chooser</string>

    <string name="not_confirmed">Not confirmed</string>
    <string name="to_do">To do</string>
    <string name="order_number_label">Order number:</string>
    <string name="order_delivery_time_label">Delivery time</string>
    <string name="delivery_cost_label">Delivery cost</string>
    <string name="subtotal_price_label">SubTotal price</string>
    <string name="total_price_label">Total price</string>
    <string name="order_notes_label">Order notes</string>
    <string name="order_products_label">Products</string>
    <string name="confirm_order_button">Confirm order</string>
    <string name="refuse_order_button">Refuse order</string>
    <string name="late_button">Late</string>

    <string name="date_time_opening">DateTime opening</string>

    <string name="empty_order_not_confirmed">No order to confirm</string>
    <string name="empty_order_to_do">No order to do</string>
    <string name="empty_order_history">No order completed</string>

    <string name="gps_permission_explanation">The app needs access to your location to improve the search for restaurants near you</string>
    <string name="message_no_gps_permission">The app can\'t access your current position</string>

    <string name="account_details">Account Details</string>
    <string name="account_info">Account Info</string>
    <string name="privacy_and_security">Privacy and Security</string>
    <string name="change_password">Change Password</string>
    <string name="order_settings">Order Settings</string>

    <string name="account_detail">Account Detail</string>
    <string name="edit">Edit</string>
    <string name="new_shop_name">New shop name</string>
    <string name="new_email">New email</string>

    <string name="confirm">Confirm</string>
    <string name="close">Close</string>

    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm new password</string>

    <string name="delete_account">Delete Account</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_review_list">Reviews</string>
    <string name="title_review_detail">Review Detail</string>

    <string name="empty_review">No reviews</string>

    <string name="message_confirm_deleteAccount">Are you sure you want to delete the account? All data will be deleted</string>
    <string name="message_confirm_deleteCategory">This category and all its products will be deleted. Are you sure?</string>
    <string name="message_confirm_deleteProduct">This product will be deleted. Are you sure?</string>


    <string name="new_password_equals_old">New password cannot be equals to the old password</string>

    <string name="order_date_label">Order date</string>

    <string name="order_detail">Order detail</string>

    <string name="delivery_date_label">Delivery date</string>
    <string name="order_number">Order number</string>

    <string name="menu">Menu</string>

    <string name="review_date">Review date</string>
    <string name="search_rider">Search rider</string>
    <string name="order_ready">Order ready</string>
    <string name="deliver_order">Deliver order</string>

    <string name="order_type">Order type:</string>
    <string name="home_delivery">Home delivery</string>
    <string name="take_away" translatable="false">Take away"</string>

    <string name="message_pickup_time_dialog">Notify to your rider how many minutes the order will be ready</string>

    <string name="optional_field">*Optional field</string>

    <string name="delivered">Delivered</string>
    <string name="wrong_validation_code">Wrong validation code</string>

    <string name="message_deliver_order_activity_with_nfc">Insert validation code for order delivery. You can use also the NFC function for code exchange</string>
    <string name="message_deliver_order_activity_with_nfc_off_nfc">Insert validation code for order delivery. You can use also the NFC function for code exchange but first turn it on</string>
    <string name="message_deliver_order_activity">Insert validation code for order delivery</string>

    <string name="message_password_changed">The password has been successfully changed</string>


    <string name="loadImage">Load profile image</string>
    <string name="logout">Logout</string>
    <string name="VATnumber">VAT number</string>
    <string name="shopType">Shop type</string>
    <string name="city">City</string>
    <string name="addNewCat">New category</string>
    <string name="newCategoryName">New category name</string>
    <string name="newProductDescription">New description</string>
    <string name="newProductPrice">New price</string>
    <string name="newProductName">New product name</string>
    <string name="lastItemText">Add new product</string>
    <string name="modProductName">MODIFY PRODUCT NAME</string>
    <string name="deleteProduct">DELETE PRODUCT</string>
    <string name="addNewProduct">ADD NEW PRODUCT</string>
    <string name="modCategoryName">MODIFY CATEGORY NAME</string>
    <string name="deleteCategory">DELETE CATEGORY</string>
    <string name="emptyFieldError">This field cannot be null</string>
    <string name="title_order_list">Orders</string>
    <string name="title_order_detail">Order Detail</string>
    <string name="title_orders">Orders</string>
    <string name="title_doneorder_list">Done orders</string>
    <string name="title_doneorder_detail">Done order detail</string>
    <string name="title_activity_opening_date_time">Opening times</string>
    <string name="wrong_value_error">This value is not valid</string>
    <string name="You_will_delete">"You are going to delete "</string>
    <string name="are_you_sure">are you sure ?</string>
    <string name="modProduct">MODIFY PRODUCT</string>

    <string name="notification_channel_id" translatable="false">FirebaseNotifications-RestaurateurChannel</string>
    <string name="notification_channel_name">Server notifications</string>

    <string name="hint_num_max_delivery_time_per_slot">Define how much orders you could handle each 30 minutes </string>
    <string name="hint_delivery_cost">Default value is 1. Min delivery cost value is 1</string>

    <string name="title_activity_menu">My menu</string>
    <string name="title_activity_orders">My orders</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_devliver_order">Deliver order</string>

    <string name="message_refuse_order">Are you sure you want to refuse this order?</string>

</resources>
