<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/textViewOrderNumberProductLabel"
        style="@style/TextViewMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_number_label"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/textViewDoneOrderNumberProduct"
        style="@style/TextViewMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="@+id/textViewOrderNumberProductLabel"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/textViewOrderDeliveryTimeLabel"
        style="@style/TextViewMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_delivery_time_label"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrderNumberProductLabel"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/textViewDoneOrderDeliveryTime"
        style="@style/TextViewMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textViewDoneOrderNumberProduct"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/textViewOrderDeliveryTimeLabel"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/textViewOrderProductsLable"
        style="@style/TextViewMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_products_label"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrderDeliveryTimeLabel"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productsOrderDoneRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDoneOrderDeliveryTime"
        tools:listitem="@layout/product_detail"
        android:focusable="false" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewOrderNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productsOrderDoneRecyclerView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewOrderNotesLabel"
                style="@style/TextViewMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/order_notes_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewDoneOrderNotes"
                style="@style/TextViewSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewOrderNotesLabel" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textViewOrderPriceProductLabel"
        style="@style/TextViewSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_cost_label"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrderSubTotalPriceLabel"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewDoneOrderDeliveryPrice"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/textViewDoneOrderDeliveryPrice"
        style="@style/TextViewSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textViewDoneOrderSubTotalPrice"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/textViewOrderSubTotalPriceLabel"
        style="@style/TextViewSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtotal_price_label"
        app:layout_constraintTop_toBottomOf="@+id/cardViewOrderNotes"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewDoneOrderSubTotalPrice"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/textViewDoneOrderSubTotalPrice"
        style="@style/TextViewSmall"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cardViewOrderNotes"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/textViewOrderTotalPriceLabel"
        style="@style/TextViewMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_price_label"
        app:layout_constraintEnd_toStartOf="@id/textViewDoneOrderTotalPrice"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrderPriceProductLabel"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/textViewDoneOrderTotalPrice"
        style="@style/TextViewMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewDoneOrderDeliveryPrice"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>